--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -9,6 +9,7 @@ pre-commit
 pytest
 pytest-asyncio
 pytest-xdist
+pytest_httpserver>=1.0.10
 setuptools_scm
 types-protobuf
 types-requests==2.30.0.0
